--- a/08_week/Homework Display API/style.css
+++ b/08_week/Homework Display API/style.css
@@ -26,3 +26,22 @@ h1 {
     display: block;
     border-radius: 1000px;
 }
+
+button {
+    display: block;
+    object-position: top;
+    margin: 20px auto;
+    border: none;
+    padding: 15px 25px;
+    text-align: center;
+    text-decoration: none;
+    cursor: pointer;
+    border-radius: 15px;
+    transition: background-color 0.3s;
+    color: black;
+    font-weight: bold;
+}
+
+button:hover {
+    background-color: red;
+}
